--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "6to5-core": "^3.0.15",
+    "6to5-loader": "^3.0.0",
     "flux": "^2.0.1",
     "immutable": "^3.6.2",
-    "react": "^0.12.2"
+    "react": "^0.12.2",
+    "webpack": "^1.5.3"
   }
 }
