--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A stupid racing game",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "node dev_server.js"
   },
   "author": "",
   "license": "MIT",
@@ -14,6 +14,7 @@
     "flux": "^2.0.1",
     "immutable": "^3.6.2",
     "react": "^0.12.2",
+    "react-hot-loader": "^1.1.4",
     "webpack": "^1.5.3",
     "webpack-dev-server": "^1.7.0"
   }
