--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "immutable": "^3.6.2",
     "react": "^0.12.2",
     "react-hot-loader": "^1.1.4",
+    "react-router": "^0.11.6",
     "webpack": "^1.5.3",
     "webpack-dev-server": "^1.7.0"
   }
