--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "6to5-core": "^3.0.15",
-    "6to5-loader": "^3.0.0",
+    "babel-core": "^4.7.12",
+    "babel-loader": "^4.1.0",
     "flux": "^2.0.1",
-    "immutable": "^3.6.2",
+    "immutable": "^3.6.4",
     "keymirror": "^0.1.1",
     "object-assign": "^2.0.0",
     "react": "^0.12.2",
     "react-router": "^0.11.6",
-    "webpack": "^1.5.3"
+    "webpack": "^1.7.3"
   },
   "devDependencies": {
     "react-hot-loader": "^1.1.4",
