--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "keymirror": "^0.1.1",
     "object-assign": "^2.0.0",
     "react": "^0.12.2",
-    "react-router": "^0.11.6",
+    "react-hot-loader": "^1.2.3",
+    "react-router": "^0.12.4",
     "webpack": "^1.7.3"
   },
   "devDependencies": {
