--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flux": "^2.0.1",
     "immutable": "^3.6.4",
     "keymirror": "^0.1.1",
+    "moment": "^2.9.0",
     "object-assign": "^2.0.0",
     "react": "^0.12.2",
     "react-hot-loader": "^1.2.3",
