--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babel-core": "^4.7.12",
     "babel-loader": "^4.1.0",
+    "firebase": "^2.2.3",
     "flux": "^2.0.1",
     "immutable": "^3.6.4",
     "keymirror": "^0.1.1",
