--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^0.12.2",
     "react-hot-loader": "^1.2.3",
     "react-router": "^0.12.4",
+    "react-tappable": "^0.5.0-beta.2",
     "sass-loader": "^0.5.0",
     "style-loader": "^0.8.3",
     "url-loader": "^0.5.5",
