--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "A stupid racing game",
   "main": "index.js",
+  "private": true,
   "scripts": {
-    "start": "node dev_server.js"
+    "start": "node dev_server.js",
+    "prod": "webpack --config webpack.config.build.js"
   },
   "author": "",
   "license": "MIT",
@@ -31,7 +33,11 @@
     "webpack": "^1.7.3"
   },
   "devDependencies": {
+    "gulp": "^3.8.11",
+    "gulp-rev": "^3.0.1",
+    "gulp-rev-collector": "^0.1.4",
     "react-hot-loader": "^1.1.4",
+    "run-sequence": "^1.0.2",
     "svgo": "^0.5.0",
     "webpack-dev-server": "^1.7.0"
   }
